methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:12: error: not found: value YELLOW
    faireV(YELLOW)
           ^MethodsPicture:13: error: not found: value RED
    faireV(RED)
           ^MethodsPicture:14: error: not found: value BLUE
    faireV(BLUE)
           ^MethodsPicture:15: error: not found: value GREEN
    faireV(GREEN)
           ^