methods.picture.MethodsPicture.scala.code
override def run() {
  
  def faireV(c:Color){
    setCouleurBrosse(c)
    avance() ; avance() ; baisseBrosse() ; leveBrosse()
    avance() ; gauche() ; avance() ; baisseBrosse() ; leveBrosse()
    recule() ; droite() ; avance() ; baisseBrosse() ; leveBrosse()
    avance() ; gauche()
  }
  
  def faireCarre(){
    faireV(YELLOW)
    faireV(RED)
    faireV(BLUE)
    faireV(GREEN)
  }
  
  def changerCarre(){
    for (k <-1 to 5){
      avance()
    }
  }
  
  def changerLigne(){
    gauche()
    for (k <-1 to 5){
      avance()
    }
    droite()
  }
}